chores: revert scroll sync logic due to IE overflow-x:hidden / scrollLeft > 0 bug

--- a/packages/react-data-grid/style/rdg-core.less
+++ b/packages/react-data-grid/style/rdg-core.less
@@ -18,7 +18,7 @@
 
 .rdg-viewport {
   position: relative;
-  overflow-x: hidden;
+  overflow-x: auto;
   overflow-y: scroll;
   background-color: #fff;
   // will-change promotes the canvas to a new layer, improving scroll responsiveness
@@ -28,12 +28,4 @@
 .rdg-grid {
   // min-height is here to show the horizontal scrollbar when there are no rows
   min-height: 1px;
-}
-
-.rdg-horizontal-scroll-bar {
-  overflow-x: auto;
-
-  > div {
-    height: 1px;
-  }
 }
